Added all the things

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <h3>Muffin Button</h3>
-  
+  <div id="card-holder">
+   
+  </div>
   <script src="/main.js"></script>
 </body>
 </html>
